Deep|Bayes 2020 is cancelled

--- a/index.html
+++ b/index.html
@@ -64,9 +64,17 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <nav class="collapse navbar-collapse" id="navbar">
                     <ul class="nav navbar-nav navbar-right" id="top-nav">
-                        <li><a href="./2019/" style="opacity:0.3; font-weight:600">2019</a></li>
-                        <li><a href="./2018/" style="opacity:0.3; font-weight:600">2018</a></li>
-                        <li><a href="./2017/" style="opacity:0.3; font-weight:600">2017</a></li>
+                        <li>
+  <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="opacity:0.5; font-weight:600">
+    Previous Runs
+  </a>
+
+<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <li><a href="./2019/">2019 (En)</a></li>
+    <li><a href="./2018/">2018 (En)</a></li>
+    <li><a href="./2017/">2017 (Ru)</a></li>
+  </ul>
+                        </li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#apply">Apply</a></li>
                         <li><a href="#faq">FAQ</a></li>
@@ -82,7 +90,8 @@
                     <div class="col-md-8">
                         <div class="block">
                             <h1 class="wow fadeInDown">Summer school on <br/><span>Deep Learning</span> and <br/><span>Bayesian Methods</span></h1>
-                            <p class="wow fadeInDown" data-wow-delay="0.3s">August 27 – September 1, 2020, Moscow, Russia</p>
+                            <p class="wow fadeInDown" data-wow-delay="0.3s"><del>August 27 – September 1, 2020, Moscow, Russia</del></p>
+                            <p class="wow fadeInDown" data-wow-delay="0.3s">Cancelled due to the global pandemic</p>
                         </div>
                     </div>
                     <div class="col-md-4 zoomIn">
@@ -178,19 +187,19 @@
                     </div>
                 </div>
 
-                <div class="row">
-                        <div class="sub-heading">
-                            <h2>Preliminary Dates</h2>
-                        </div>
-                        <div class="block">
-                            <ol>
-                                <li>February 24: Applications open</li>
-                                <li>April 15, 23:59 Moscow Time (GMT+3): Applications close</li>
-                                <li>Early May: Acceptance notification</li>
-                                <li>August 27 – September 1: Summer School</li>
-                            </ol>
-                        </div>
+                <!-- div class="row">
+                    <div class="sub-heading">
+                        <h2>Preliminary Dates</h2>
                     </div>
+                    <div class="block">
+                        <ol>
+                            <li>February 24: Applications open</li>
+                            <li>April 15, 23:59 Moscow Time (GMT+3): Applications close</li>
+                            <li>Early May: Acceptance notification</li>
+                            <li>August 27 – September 1: Summer School</li>
+                        </ol>
+                    </div>
+                </div -->
                 
             </div>
         </section><!-- #about close -->
@@ -203,9 +212,9 @@
                         </div>
                         <div class="block">
                             <p>
-                            Applications are <strong>open</strong> until April 15, 23:59 Moscow Time (GMT+3).
+                            Unfortunately, we had to cancel this year's school due to the global pandemic. Check back next year and be sure to watch previous year's videos.
                             </p>
-                            <a href="https://forms.gle/Lw933hcyorqR26rr7" target="_blank" class="btn btn-home">Application Form</a>
+                            <a href="./2019/#materials" target="_blank" class="btn btn-home">2019 Videos</a>
                         </div>
                 </div>
             </div>
@@ -505,14 +514,14 @@
                                 <strong>How competitive is the admission?</strong>
                                 <p>Last year we received about 300 applications for 100 slots (however, for this year the number of available slots may be different).</p>
                             </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <ul>
                             <li>
                                 <strong>Will meals be provided?</strong>
                                 <p>We will provide coffee breaks and lunches.</p>
                             </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        <ul>
                             <li>
                                 <strong>I do not know much about machine learning, but I would like to learn more. Should I participate in Deep|Bayes school?</strong>
                                 <p>Unfortunately, no. Our summer school is intended for candidates who have strong knowledge of machine learning and are familiar with neural networks. Such level of participants enables us to delve into to technical details and quickly proceed to advanced topics while being confident that the material is accessible for everyone.  For learning machine learning fundamentals, we encourage you to check out numerous resources available on the web.</p>
